--- a/views/Home.handlebars
+++ b/views/Home.handlebars
@@ -61,7 +61,7 @@
             <div class="container"  style="height: 100%; width: 100%; padding: 0px;">
               <div class="carousel-inner" style="height: 100%; width: 100%; border-radius: 20px;">
                 <div class="item active">
-                  <img src="God Eater/Main.jpeg" style="height: 200px; width: 100%;border-radius: 10px;">
+                  <img src="God Eater/main.jpeg" style="height: 200px; width: 100%;border-radius: 10px;">
                 </div>
                 <div class="item">
                   <img src="God Eater/mini2.jpg" style="height: 200px; width: 100%;border-radius: 10px;">
@@ -226,10 +226,10 @@
                   <img src="Radiant Mythology 2/Mini1.jpg" style="height: 200px; width: 100%;border-radius: 10px;">
                 </div>
                 <div class="item">
-                  <img src="Radiant Mythology 2/Mini2.png" style="height: 200px; width: 100%;border-radius: 10px;">
+                  <img src="Radiant Mythology 2/Mini2.PNG" style="height: 200px; width: 100%;border-radius: 10px;">
                 </div>
                 <div class="item">
-                  <img src="Radiant Mythology 2/Mini3.png" style="height: 200px; width: 100%;border-radius: 10px;">
+                  <img src="Radiant Mythology 2/Mini3.PNG" style="height: 200px; width: 100%;border-radius: 10px;">
                 </div>
               </div>
             </div>  
