--- a/views/Home.handlebars
+++ b/views/Home.handlebars
@@ -64,10 +64,10 @@
                   <img src="God Eater/main.jpeg" style="height: 200px; width: 100%;border-radius: 10px;">
                 </div>
                 <div class="item">
-                  <img src="God Eater/mini2.jpg" style="height: 200px; width: 100%;border-radius: 10px;">
+                  <img src="God Eater/Mini2.jpg" style="height: 200px; width: 100%;border-radius: 10px;">
                 </div>
                 <div class="item">
-                  <img src="God Eater/PIC1.png" style="height: 200px; width: 100%;border-radius: 10px;">
+                  <img src="God Eater/PIC1.PNG" style="height: 200px; width: 100%;border-radius: 10px;">
                 </div>
               </div>
             </div>  
@@ -159,10 +159,10 @@
             <div class="container"  style="height: 100%; width: 100%; padding: 0px;">
               <div class="carousel-inner" style="height: 100%; width: 100%; border-radius: 20px;">
                 <div class="item active">
-                  <img src="Phantasy Star 2/Mini1.png" style="height: 200px; width: 100%;border-radius: 10px;">
+                  <img src="Phantasy Star 2/Mini1.PNG" style="height: 200px; width: 100%;border-radius: 10px;">
                 </div>
                 <div class="item">
-                  <img src="Phantasy Star 2/Mini2.png" style="height: 200px; width: 100%;border-radius: 10px;">
+                  <img src="Phantasy Star 2/Mini2.PNG" style="height: 200px; width: 100%;border-radius: 10px;">
                 </div>
                 <div class="item">
                   <img src="Phantasy Star 2/Mini3.jpg" style="height: 200px; width: 100%;border-radius: 10px;">
@@ -197,7 +197,7 @@
                   <img src="Radiant Mythology/Mini2.jpg" style="height: 200px; width: 100%;border-radius: 10px;">
                 </div>
                 <div class="item">
-                  <img src="Radiant Mythology/Mini3.png" style="height: 200px; width: 100%;border-radius: 10px;">
+                  <img src="Radiant Mythology/Mini3.PNG" style="height: 200px; width: 100%;border-radius: 10px;">
                 </div>
               </div>
             </div>  
