--- a/views/Home.handlebars
+++ b/views/Home.handlebars
@@ -47,7 +47,7 @@
   </div>
 </nav>
 <div class="container" style="width: 100%; height:50px; padding: 5px;background-color:#040959; ">
-  <img src="title.png" style="height: 100%; position: relative; left: 50px;">
+  <img src="Title.png" style="height: 100%; position: relative; left: 50px;">
 </div>
 <div class="container" style="height: 600px;width: 100%;margin: 0px; padding: 0px;">
   <img src="Banner.png" style="height: 100%; width: 100%;">
