--- a/views/AppPage.handlebars
+++ b/views/AppPage.handlebars
@@ -1,14 +1,29 @@
 <style>
 	body{
-		background-color: grey;
+		background-image: url("/God Eater/main.jpeg");
+		background-size: cover;
 	}
 </style>
-<div class="container">
-	<div>
-		<img src="/God Eater/main.jpeg">
+<div class="container" style="background-color: white; width: 75%;">
+	<div class="container-fluid" style="margin: 0px; padding: 0px; width: 90%;">
+		<div class="row">
+    		<div class="col-sm-6">
+    			<h1>Column 1</h1>
+    		</div>
+    		<div class="col-sm-6">
+				<div class="col-sm-12">
+					<h1> {{name}}</h1>
+				</div>
+				<div class="col-sm-12">
+					<h1>{{rating}}</h1>
+				</div>
+				<div class="col-sm-12">
+					<h1>{{date_release}}</h1>
+				</div>
+				<div class="col-sm-12">
+					<h1>{{description}}</h1>
+				</div>
+			</div>
+		</div>
 	</div>
-	<div class="body">
-		hi		
-	</div>
-
 </div>
