--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
  <html>
  	<head>
- 		<title>Assignment #2</title>
+ 		<title>Module 2</title>
  		<link rel="Shortcut Icon" href="favicon.ico">
 		<meta charset="utf-8">
   		<meta name="viewport" content="width=device-width, initial-scale=1">
