--- a/views/Home.handlebars
+++ b/views/Home.handlebars
@@ -245,7 +245,7 @@
           </div>
       </div>
       <div>
-        <a href="/AppPage/Radiant Mythology" style="color:inherit;text-decoration-line: none;"><h3 id="Details" style="margin-left: 60px; margin-right: 65px; border-top-style: solid; border-bottom-style: solid; font-size: 150%;">(Bonus) Radiant Mythology 2</h3></a>
+        <a href="/AppPage/Radiant Mythology 2" style="color:inherit;text-decoration-line: none;"><h3 id="Details" style="margin-left: 60px; margin-right: 65px; border-top-style: solid; border-bottom-style: solid; font-size: 150%;">(Bonus) Radiant Mythology 2</h3></a>
       </div>
     </div>
   </div>
