--- a/views/AppPage.handlebars
+++ b/views/AppPage.handlebars
@@ -6,6 +6,10 @@
 		background-repeat: no-repeat;
 	}
 	{{/rows}}
+	#Details:hover {
+    background-color:  #14143d;
+    transition-duration: 1s;
+    }
 </style>
 <div class="container" style="background-color: #A6A6A6; width: 75%; margin-top: 100px; border-radius: 20px; opacity: 0.95;">
 	<div class="container-fluid" style="margin: 0px; padding: 0px; width: 90%;">
@@ -24,6 +28,13 @@
 				<div class="col-sm-12">
 					<h2>Price: &#8369; {{price}}</span></h2>
 				</div>
+				<div class="col-sm-12">
+					<div style="padding-right: 220px; text-align: center;">
+						<button id="Details" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" style="background-color: ;color: inherit;"><h3>ORDER NOW!!!</h3></button>
+						<br>
+						<br>
+					</div>
+				</div>				
     		</div>
     		<div class="col-sm-6">
 				<div class="col-sm-12">
@@ -48,3 +59,51 @@
 		</div>
 	</div>
 </div>
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+    	<!-- Modal content-->
+    	<div class="modal-content">
+    		<div class="modal-header">
+        		<button type="button" class="close" data-dismiss="modal">&times;</button>
+        		<h4 class="modal-title">Send Us Your Order</h4>
+        	</div>
+        <div class="modal-body">
+        	<div class="form-group">
+		    	<div class="col-sm-6">
+		    		<label for="email">Full Name:</label>
+		    		<input type="email" class="form-control" id="customer" placeholder="e.g. Juan Dela Cruz" name="customer">
+		    	</div>
+		    	<div class="col-sm-6">
+		    		<label for="email">Phone:</label>
+		    		<input type="email" class="form-control" id="phone" placeholder="e.g. 09123456789" name="phone">
+		    	</div>
+		    </div>
+		    <br>
+		    <br>
+		    <br>
+		    <div class="form-group">
+		    	<div class="col-sm-6">
+		    		<label for="email">Email:</label>
+		    		<input type="email" class="form-control" id="email" placeholder="e.g. email@example.com" name="email">
+		    	</div>
+		    	<div class="col-sm-6">
+		    		<label for="email">Quantity:</label>
+		    		<input type="email" class="form-control" id="quantity" placeholder="e.g. 1, 2, n..." name="quantity">
+		    	</div>
+		    </div>
+		    <br>
+		    <br>
+		    <br>
+		    <div class="checkbox">
+		    	<label><input type="checkbox" name="remember"> Remember me</label>
+		    </div>
+        </div>
+        <div class="modal-footer">
+        	<button type="submit" class="btn btn-default"	style="float: left;">Submit</button>
+         	<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
