--- a/views/Home.handlebars
+++ b/views/Home.handlebars
@@ -35,7 +35,7 @@
       <li><a href="/Unavailable">Publisher</a></li>
       <li><a href="/Unavailable">About Us</a></li>
     </ul>
-    <form class="navbar-form navbar-left" action="/action_page.php">
+    <form class="navbar-form navbar-left" action="Post">
       <div class="input-group">
         <input type="text" class="form-control" placeholder="Search" name="search">
         <div class="input-group-btn">
